--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <form #createUser="ngForm" (ngSubmit)="saveUser()">
                 <div class="card">
                     <div class="card-header bg-info text-white" >
-                      <strong>Dynamically Add & Remove input fields from using Angular 9 </strong>
+                      <strong>Dynamically Add & Remove input fields from using Angular 9 By Rangnath Mishra</strong>
                     </div>
           
                     <div class="card-body" >
